tests/src/frontend/typechecking/invalid/late_static11.sk
base class Foo {
  static fun abs(): void;
  fun invalid(): void {
    Foo::abs()
  }
}
